Bug 1715841 - Don't bother creating a live collection when childElementCount is called on an empty element. r=smaug

If the element ever gets children, then the live collection would slow
things down.

It's unclear if the collection here is worth it at all, fwiw.

I guess it could if someone writes code looping around
childElementCount, or calls it repeatedly with a lot of children...

But maybe we should just implement it the dumb way? FWIW, WebKit and
Blink both do the equivalent of just walking over the child nodes
counting elements... Perhaps follow-up bug if you think it's worth doing
the same?

Depends on D118032

Differential Revision: https://phabricator.services.mozilla.com/D118033